# rumbly

./: Dockerfile  LICENSE  README.md  main  main.asm
api/: .gitignore  2e0aa0b3-0265-4cd1-8727-d5cdaf234769  8b2df3f4-f14c-468b-9c0f-99a0a078ba8d  a4b89f3e-b3ec-464d-a844-872176806439  d2451f7d-5208-4d62-a301-cce4df4eab2f  d43423e7-f428-4016-bd91-37f9c0fe1dde.asm  main  package-lock.json  package.json  pnpm-lock.yaml  test.ts  tsconfig.json
api/nasm/: main
api/src/: index.ts  readMainAsm.js  readMainAsm.ts
frontend/: GEMINI.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/.specify/memory/: constitution.md
frontend/.specify/templates/: plan-template.md  tasks-template.md
frontend/specs/003-create-a-interface/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CodeEditor.tsx  MonacoEditor.tsx  Terminal.tsx  font-adjust.tsx  theme-toggle.tsx
rust_api/: .gitignore  Cargo.toml  mul.asm  package.json  pnpm-lock.yaml  test.ts
rust_api/.cargo/: config.toml
rust_api/src/: main.rs
